--- a/index.ipynb
+++ b/index.ipynb
@@ -42,12 +42,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# define function here"
+    "# define function here\n",
+    "\n",
+    "def number_of_destinations():\n",
+    "    return len(travel_destinations)\n",
+    "\n",
+    "number_of_destinations()"
    ]
   },
   {
@@ -59,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,13 +84,13 @@
        "6"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# number_of_destinations() # 6"
+    "number_of_destinations() # 6"
    ]
   },
   {
@@ -86,11 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "# define function here\n",
+    "def next_up():\n",
+    "    return list_of_destinations[0]"
    ]
   },
   {
@@ -102,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,14 +129,14 @@
        "'argentina'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "list_of_destinations = ['argentina', 'canada', 'croatia']\n",
-    "# next_up() # 'argentina'"
+    "next_up() # 'argentina'"
    ]
   },
   {
@@ -130,11 +148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "# define function here\n",
+    "def favorite_destination():\n",
+    "    return 'madagascar'"
    ]
   },
   {
@@ -146,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -155,13 +175,13 @@
        "'madagascar'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# favorite_destination() # 'madagascar'"
+    "favorite_destination() # 'madagascar'"
    ]
   },
   {
@@ -173,11 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "# define function here\n",
+    "def add_favorite_destination():\n",
+    "    favorite_destinations.append('madagascar')\n",
+    "    return favorite_destinations"
    ]
   },
   {
@@ -189,30 +212,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'madagascar'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# add_favorite_destination()\n",
+    "add_favorite_destination()\n",
     "favorite_destinations[-1] # 'madagascar'"
    ]
   },
@@ -225,12 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# define function here"
+    "# define function here\n",
+    "def capitalize_countries():\n",
+    "    for index, destination in enumerate(capitalized_destinations):\n",
+    "        capitalized_destinations[index] = destination.capitalize()\n",
+    "    return capitalized_destinations"
    ]
   },
   {
@@ -242,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -251,13 +271,13 @@
        "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+    "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
   },
   {
@@ -298,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
